# mailboxprocessor-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic.cpp
include/: mailbox_processor.h
